[metadata]
name = rk_toolkit
version = 0.0.1
author = Andor Kesselman
author_email = andor@henosisknot.com
description = RK Diagram Base models and Toolkit
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/andorsk/rk-diagrams
project_urls =
    Bug Tracker = https://github.com/andorsk/rk-diagrams/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
